<resources>
    <string name="app_name">胜辉贷</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="boluos_touzi_string">账户</string>
    <string name="boluos_faxian_string">发现</string>
    <string name="boluos_my_string">我的投资</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="setup_gesture_code">设置手势密码</string>
    <string name="setup_gesture_pattern">绘制解锁图案</string>
    <string name="setup_gesture_pattern_again">再次绘制解锁图案</string>
    <string name="forget_gesture_code">忘记手势密码?</string>
    <string name="use_other_account_login">用其他账号登录</string>
    <string name="set_gesture_pattern">绘制解锁图案</string>
    <string name="set_gesture_pattern_reason">设置手势密码，防止他人未经授权查看</string>
    <string name="enter_gesture_every_time">每次进入即可使用手势密码</string>
    <string name="reset_gesture_code">重新设置</string>
    <string name="byAnquan">胜辉贷安全输入</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">0</string>
    <string name="pay_content">充值金额：</string>
    <string name="pay_title">请设置密码</string>
    <string name="pay_sure">确认支付</string>
    <string name="pay_cancel">取消</string>
    <string name="fuwu">\n1、关注“胜辉贷”微信公众号，联系微信客服提出解绑申请；也可拨打400-009-8087联系客服。
	\n2、提供您的邮箱地址，我们会把您需要准备的资料发送到您的邮箱。请您更具邮件内容提交内容提交相应资料。
	\n3、资料审核通过后，一个工作日内为您办理成功。
	\n
	\n提示：如果卡片注销或遗失，请到银行开具证明，并将原件邮寄给我们，更换同行银行卡需开具“换卡证明”，异行需开具“注销证明”。</string>
    <string name="www_boluo_com">胜辉贷(www.boluo.com)隶属于北京朴素磐石投资管理有限公司。胜辉贷基于互联网技术结合金融生态，为广大中小企业主、金领和白领客户提供安全、短期、高收益的固定收益互联网理财服务，力求为客户创造极致的互联网金融体验。我们会在官网首页发布项目，展示借款人的借款需求，投资人进行投资后获得利息收益。</string>
    <string name="safe_string">一、胜辉贷平台声明
    \n
\n1、胜辉贷平台是为平台用户提供信息中介服务的互联网金融平台，即为投资人提供借贷信息的采集整理、甄别筛选、网上发布及资信评估、信息交互等服务，实现出借人以小额的方式参与网络借贷。
\n
\n2、为了充分保障您的合法权益，您在注册使用胜辉贷平台前，必须仔细阅读并充分理解知悉《胜辉贷平台服务务协议》的所有条款。一经注册或使用胜辉贷平台提供的服务即视为对您本服务协议的充分理解和接受，如有违反而导致任何法律后果的发生，您将以本人的名义独立承担相应的法律责任。
\n
\n3、胜辉贷平台对于您的通知（包括但不限于任何其他的协议、告示或其他关于您使用会员账户及服务的通知），通过胜辉贷平台公告、电子邮件、手机短信等方式进行传递或公布，该等通知于发送之日视为已送达收件人。因信息传输等原因导致您未在前述通知发出当日收到该等通知的，胜辉贷平台不承担任何责任。
\n
\n二、风险告知
\n
\n胜辉贷平台向您提供的理财产品是胜辉贷依据平台核心风控原理为您精心设计的低风险理财产品，但您理解，任何通过互联网平台进行的交易并不能避免以下风险的产生：
\n
\n1、宏观经济风险：因宏观经济形势变化，可能引起价格等方面的异常波动，您有可能遭受损失；
\n
\n2、政策风险：有关法律、法规及相关政策、规则发生变化，可能引起价格等方面异常波动，您有可能遭受损失；
\n
\n3、违约风险：因其他交易方无力或无意愿按时足额履约，您有可能遭受损失；
\n
\n4、利率风险：市场利率变化可能对购买或持有产品的实际收益产生影响；
\n
\n5、不可抗力因素导致的风险及第三方恶意攻击产生的风险；
\n
\n6、因您的过错导致的任何损失 ，该过错包括但不限于：决策失误、操作不当、遗忘或泄露密码、密码被他人破解、您使用的计算机系统被第三方侵入、您委托他人代理交易时他人恶意或不当操作而造成的损失。
\n
\n因此，胜辉贷平台不对您的任何投资交易提供任何担保，无论是明示、默示或法定的。胜辉贷不能也不试图对您发布的信息进行控制，对该等信息，胜辉贷不承担任何形式的证明、鉴定服务。此外，胜辉贷平台也不能完全保证平台内容的真实性、充分性、可靠性、准确性、完整性和有效性，并且无需承担任何由此引起的法律责任。您依赖于您的独立判断进行交易，您应对其作出的判断承担全部责任。
\n
\n以上并不能揭示您通过胜辉贷平台进行交易的全部风险及市场的全部情形。您确认，在做出交易决策前，已全面了解相关交易风险，谨慎并自行承担全部风险。
 \n                                     
\n北京朴素磐石投资管理有限公司
\n
\n年    月    日</string>
    <string name="xieyi">胜辉贷平台（网址：https://www.shenghuidai.com）及其已经开发及将来开发的实现部分或全部胜辉贷平台功能的移动终端软件（即网站、APP，包括但不限于手机客户端软件或工具）（以下统称为“胜辉贷平台”）系由北京朴素磐石投资管理有限公司（以下简称“胜辉贷”）负责运营的网络借贷信息中介服务平台。胜辉贷平台依据本协议为注册用户（以下简称“会员”或“您”）提供服务。
        \n
\n在您注册成为胜辉贷平台会员前请务必仔细阅读以下条款。若您一旦提交注册申请,即表示您已阅读本协议所有条款，并对本协议条款的含义及相应的法律后果已全部通晓并充分理解，同意受本协议约束。 
\n
\n第一条 会员注册 
\n
\n1.1胜辉贷平台会员应当具有完全民事行为能力和民事责任能力（自然人年满十八周岁）。若您不符合上述条件的，请立即停止注册或停止使用本服务。
\n
\n1.2您根据胜辉贷平台的注册规定，成功注册之后，即建立了您在胜辉贷平台的唯一会员账户（以下简称“平台账户”），您可以登录会员账户，使用网站服务。
\n
\n1.3您有义务在注册时提供自己的真实、最新、有效及完成的信息资料，并保证诸如电子邮件地址、联系电话、联系地址、邮政编码等内容的真实性、有效性及安全性，以及胜辉贷平台及其他会员可以通过上述联系方式与您进行联系。若您提供任何不真实、不准确、不完整或不能反映当前实际情况的资料，或胜辉贷平台有合理理由怀疑该等资料不真实、不准确、不完整或不能反映当前情况，胜辉贷平台均有权拒绝您的申请或者撤销您的会员资格，并拒绝您在目前或将来以任何形式使用胜辉贷平台提供的服务，且不承担任何赔偿责任。
\n
\n1.4若您冒用、盗用或以其他未经授权方式使用他人资料进行注册登记的，由此引起的一切后果概由您独立承担。胜辉贷平台获悉或怀疑您未经授权使用他人资料注册的,可以采取立即注销您的会员账户、暂停或者终止为您提供服务等措施而无须承担任何责任。
\n
\n1.5您保证您在参与网络借贷之前，应当拥有非保本类金融产品投资的经历并熟悉互联网。
\n
\n第二条 会员账户使用
\n
\n2.1您通过您的平台账户登陆胜辉贷平台后的一切行为均视为您的真实意思表示并由您承担相应的法律后果。您应妥善保管您的账户密码及其他相关信息，因保管不善导致经济损失的，由会员承担责任。 
\n
\n2.2您可随时更改您的用户名和密码，但任何更改均须经胜辉贷接受，方为有效。
\n
\n2.3您应妥善保管您的平台账户，除您有效授权的代理人外，您不得以借用、租用或其他任何方式提供给第三方使用。胜辉贷在此郑重提醒您，无论是您还是您的代理人或其他第三方（包括但不限于您的用户名、密码泄露导致），以您的平台账户登录胜辉贷后的一切行为和言论均视为您本人的行为，并应由您承担相应的法律后果。
\n  
\n第三条 服务 
\n
\n3.1 胜辉贷服务内容主要包括根据会员需求发布交易信息、提供交易管理服务、提供客户服务等，具体详情以胜辉贷平台当时提供的服务内容为准。胜辉贷服务的部分内容需要会员根据胜辉贷要求完成身份认证及银行卡认证，未进行身份认证及/或银行卡认证的会员将无法使用该部分胜辉贷服务。因未能完成认证而无法享受胜辉贷服务造成的损失，胜辉贷不承担任何责任。
\n
\n3.2 发布交易信息
\n
\n3.2.1 胜辉贷同意向会员提供交易信息，会员同意接受胜辉贷提供的该项服务。双方同意，胜辉贷向会员提供信息应按如下范围和规则进行： 
\n
\n(1) 胜辉贷应对在胜辉贷上 展示的各项借款人基本信息，在适用法律和技术手段允许和合理的范围内进行必要的查验，以供会员在决定是否向借款人借款时参考。在会员与借款人之间债权债务关系尚未完全清偿前，胜辉贷如获知其提供的借款人联络信息发生变更或存在不真实、不准确的情形，应及时以电子邮件的方式通知会员。 
\n
\n(2) 胜辉贷可以选择是否通过胜辉贷向会员提供其自行收集或从其他第三方合作机构获得的除借款人联络信息之外的其他借款人信息，如借款人的工作情况、收入情况、家庭情况、信用报告、历史偿债情况等，以供会员在自行决定是否向借款人借款时参考。会员应自行判断该等信息的真实性、准确性和完整性。在会员与借款人之间债权债务关系尚未完全清偿前，胜辉贷如获知其提供的相关借款人信息发生变更或存在不真实、不准确的情形，应及时以电子邮件的方式通知会员。 
\n
\n3.2.2 双方同意并确认，胜辉贷根据本协议的约定向会员提供的交易信息仅供会员决定是否出借资金时予以参考，无论会员通过胜辉贷形成的借贷关系是否存在第三方担保，在任何情况下均不应视为胜辉贷及其关联方对借款人偿还能力及借款协议的履行作出了任何明示或默示的担保，亦不应视为胜辉贷及其关联方对会员的本金和/或收益作出了明示或默示的担保或保证。会员应自行判断相关信息的真实性、准确性、及时性，自主决定是否出借，并承担由此 而导致的一切损失或责任，胜辉贷将其所知的借款人信息的变更情况或所在其能力范围内所了解的借款人信息不真实、不准确的情形通知会员，在任何情况下均不视为胜辉贷对借款人信息的真实、准确、及时和完整性做出任何保证或承诺。
\n
\n3.3 资金管理
\n
\n3.3.1 银行卡认证：为使用胜辉贷或胜辉贷委托的第三方机构提供的充值、取现、代扣等服务，会员应按照胜辉贷平台规定的流程提交以会员本人名义登记的有效银行借记卡等信息，经由胜辉贷审核通过后，胜辉贷会将会员的账户与前述银行账户进行绑定。如会员未按照胜辉贷规定提交相关信息或提交的信息错误、虚假、过时或不完整，或者胜辉贷有合理的理由怀疑会员提交的信息为错误、虚假、过时或不完整，胜辉贷有权拒绝为会员提供银行卡认证服务，会员因此未能使用充值、取现、代扣等服务而产生的损失自行承担。
\n
\n3.3.2充值：会员可以使用胜辉贷指定的方式向会员账户充入资金，用于通过胜辉贷平台进行交易。
\n
\n3.3.3 代收/代付：胜辉贷按照其平台当时向会员开放的功能提供代收/代付服务，自行或委托第三方机构代为收取其他会员或胜辉贷合作的担保公司等第三方向会员的账户支付的本息、代偿金等各类款项，或者，将会员账户里的款项支付给会员指定的其他方。胜辉贷不保证提供的前述服务符合会员的期望。
\n
\n3.3.4 取现：当会员通过胜辉贷平台向胜辉贷做出提现指令时，胜辉贷将于收到指令1个工作日内，将相应的款项汇入会员银行卡账户（该账户须以会员为开户人，并在中国大陆境 内），根据会员提供的银行不同，会产生到账时间上的差异，胜辉贷不对到账时间做任何承诺，不承担因延迟到账相关的责任。除本条约定外，胜辉贷平台不接受会员提供的其它受领方式
\n
\n3.3.5 查询：胜辉贷将对会员在胜辉贷平台的所有操作进行记录，不论该操作之目的最终是否实现。会员可以通过会员账户实时查询会员账户名下的交易记录。会员理 解并同意会员最终收到款项的服务是由会员经过认证的银行卡对应的银行提供的，需向该银行请求查证。会员理解并同意通过胜辉贷平台查询的任何信息仅作为参考，不作为相关操作或交易的证据或依据；如该等信息与胜辉贷记录存在任何不一致，应以胜辉贷提供的书面记录为准。
\n
\n3.4会员了解，上述充值、代收/代付及取现服务涉及胜辉贷与银行、担保公司、第三方支付机构等第三方的合作。会员同意：(a) 受银行、担保公司、第三方支付机构等第三方仅在工作日进行资金代扣及划转的现状等各种原因所限，胜辉贷不对前述服务的资金到账时间做任何承诺，也不承担与此相关的责任，包括但不限于 由此产生的利息、货币贬值等损失；(b) 一经会员使用前述服务，即表示会员不可撤销地授权胜辉贷进行相关操作，且该等操作是不可逆转的，会员不能以任何理由拒绝付款或要求取消交易。就前述服务，胜辉贷暂不会向会员收取费用，但会员应按照第三方的规定向第三方支付费用。与第三方之间就费用支付事项产生的争议或纠纷，与胜辉贷无关。
\n
\n第四条 会员信息的搜集、使用
\n
\n4.1关于您的个人资料
\n
\n4.1.1胜辉贷平台收集个人资料的主要目的在于向您提供一个顺利、有效和度身订造的交易经历。胜辉贷平台仅收集胜辉贷平台认为就此目的及达成该目的所必须的关于您的个人资料。
\n
\n4.1.2 胜辉贷对于个人会员提供的、胜辉贷自行收集的、经认证的个人信息将按照本协议予以保护、使用或者披露。
\n
\n4.1.3  胜辉贷可能自公开及私人资料来源收集个人会员的额外资料，以更好地掌握个人会员情况，并为会员度身订造胜辉贷服务、解决争议并有助确保在胜辉贷平台进行安全交易。
\n
\n4.1.4 胜辉贷按照会员在胜辉贷平台上的行为自动追踪关于会员的某些资料。在不透露会员的隐私资料的前提下，胜辉贷有权对整个会员数据库进行分析并对会员数据库进行商业上的利用。
\n
\n4.1.5  胜辉贷平台在胜辉贷平台的某些网页上使用诸如“Cookies”的资料收集装置。“Cookies”是设置在您的硬盘上的小档案，以协助胜辉贷平台为您提供度身订造的服务。胜辉贷平台亦提供某些只能通过使用“Cookies”才可得到的功能。胜辉贷平台还利用“Cookies”使您能够在某段期间内减少输入密码的次数。“Cookies”还可以协助胜辉贷平台提供专门针对您的兴趣而提供的资料。
\n
\n4.2关于您个人资料的使用
\n
\n4.2.1 会员同意胜辉贷可使用会员的相关资料（包括但不限于胜辉贷持有的有关会员的档案中的资料，胜辉贷从会员目前及以前在胜辉贷平台上的活动所获取的其他资料以及胜辉贷通过其他方式自行收集的资料）以解决争议、对纠纷进行调停。会员同意胜辉贷可通过人工或自动程序对个人会员的资料进行评价。
\n
\n4.2.2 会员授权胜辉贷，除法律另有规定之外，将本人提供给胜辉贷的信息、享受胜辉贷服务产生的信息，以及胜辉贷根据本条约定查询、收集的信息，用于胜辉贷及其因服务必要委托的合作伙伴为本人提供服务、推荐产品、开展市场调查与信息数据分析。
\n
\n4.2.3会员授权胜辉贷，除法律另有规定之外，基于为会员提供更优质服务和产品的目的，向胜辉贷服务必要开展合作的伙伴提供、查询、收集本人的信息。为确保本人信息的安全，胜辉贷及其合作伙伴对上述信息负有保密义务，并采取各种措施保证信息安全。
\n
\n4.3 合理使用
\n
\n胜辉贷采用行业标准惯例以保护会员的资料。会员因履行本协议提供给胜辉贷的信息，胜辉贷不会恶意出售或免费共享给任何第三方，以下情况除外：
\n
\n4.3.1提供独立服务且仅要求服务相关的必要信息的供应商，如印刷厂、邮递公司等；
\n
\n4.3.2具有合法调阅信息权限并从合法渠道调阅信息的政府部门或其他机构，如公安机关、法院；
\n
\n4.3.3胜辉贷的关联实体；
\n
\n4.3.4经平台使用方或平台使用方授权代表同意的第三方。
\n
\n4.3.5 在您未能按照与胜辉贷平台签订的服务协议、居间协议或者与胜辉贷平台企业用户签订的借款（担保）协议的约定履行自己应尽的义务时，胜辉贷平台有权根据自己的判断或者与该笔交易有关的其他用户的请求披露您的个人资料，并作出评论，胜辉贷平台不需要承担任何责任。

\n第五条 禁止条款 
\n
\n会员在接受胜辉贷平台服务时，必须遵守中华人民共和国相关法律法规的规定，会员同意将不会于胜辉贷平台进行违法或不正当的活动，包括但不限于下列行为： 
\n
\n5.1 上传、下载、张贴、以电子邮件发送、传输、存储或以其他方式提供任何非法、有害、胁迫、骚扰、侵权、中伤、粗俗、猥亵、诽谤、淫秽、暴力、侵害他人隐私、 种族歧视或其他令人不快的包括但不限于资讯、资料、文字、软件、音乐、照片、图形、信息或其他资料（以下简称内容）。 
\n
\n5.2以任何方式危害未成年人。 
\n
\n5.3冒充任何人或机构，或以虚伪不实的方式谎称或使人误认为与任何人或任何机构有关。 
\n
\n5.4伪造标题或以其他方式操控识别资料，使他人产生误解。 
\n
\n5.5上传、张贴、发送电子邮件或以其他方式传送无权传送的内容。 
\n
\n5.6侵犯他人著作权或其他知识产权，或违反保密、雇佣或不披露协议披露他人商业秘密或保密信息。 
\n
\n5.7张贴、发送、传输或以其他方式提供任何未经收件人请求或授权的电子邮件信息、广告、促销资料、垃圾邮件等，包括但不限于大批量的商业广告和信息公告。 
\n
\n5.8上传、张贴、以电子邮件发送、传输、存储或以其他方式提供包含病毒或包含旨在危害、干扰、破坏或限制有关服务（或其任何部分）或任何其他计算机软件、硬件或通讯设备之正常运行的任何其他计算机代码、文档或程序的任何资料。 
\n
\n5.9干扰或破坏有关服务，或与有关服务连接的任何服务器或网络，或与有关服务连接之网络的任何政策、要求或规定。 
\n
\n5.10采集并存储涉及有关服务任何其他用户的个人信息，以用于任何上述被禁止的活动。 
\n
\n5.11故意或非故意违反任何相关的中国法律、法规、规章、条例等其他具有法律效力的规范。 
\n
\n第六条 平台免责与追偿
\n
\n6.1对于本网站合理控制范围以外的原因，包括但不限于自然灾害、罢工或骚乱、物资短缺或定量配给、暴动、战争行为、政府行为、通讯或其他设施故障或严重伤亡事故等，致使本网站延迟或未能履约的，本网站不赔偿因此造成的损失。 
\n
\n6.2 鉴于目前网络技术、国际电子商务环境均未成熟，会员应具备网络自我保护能力、具备网络安全基本常识，因会员自身原因（将用户名、密码等告知他人或与他人共 享注册账户，未合理保管用户名密码等）导致损失的，会员应承担因此受到的损失。同时，可能存在不法分子利用网络技术盗取会员用户名密码等个人信息进行违法犯罪活动，损害会员利益的，应视为不法分子的侵权行为，本网站不存在过错的，对上述侵权行为所造成的损失本网站不承担赔偿责任。 
\n
\n6.3 责任追偿 
\n
\n由于会员违反本协议及规则或违反法律、法规侵害第三方的权利而产生任何纠纷，导致本网站及母公司、 子公司、关联公司、高级职员、董事、代理人和雇员损失的，上述主体有权依法向该会员进行追偿。 
\n
\n第七条 涉及第三方网站 
\n
\n胜辉贷平台在运营过程中可能链接第三方网站，但胜辉贷平台不能保证第三方网站上的信息的真实性和有效性。会员应按照第三方网站的服务协议使用第三方网站。第三方网站的内容、产品、广告和其他任何信息均由会员自行判断并承担风险。 
\n
\n第八条 账户的暂停、注销、拒绝使用或终止 
\n
\n8.1 您若发现有第三人冒用或盗用会员账户及密码，或其他任何未经合法授权的情形，应立即以有效方式通知胜辉贷平台，要求胜辉贷平台暂停相关服务，否则由此产生的责任 由会员自行承担。接到通知后，胜辉贷平台将第一时间进行处理。同时，会员理解胜辉贷平台对会员的请求采取行动需要合理期限，在此之前，胜辉贷平台对第三人使用该服务所 导致的损失不承担责任。 
\n
\n8.2 您决定不再使用会员账户时，应首先清偿所有应付款项（包括但不限于借款本金、利息、罚息、违约金、服务费、管理费等），再将会员账户中的可用款项全部提现或者向胜辉贷平台发出其它合法的支付指令，并向胜辉贷平台申请注销该会员账户，经胜辉贷平台审核同意后可正式注销会员账户。 
会员死亡或被宣告死亡的，其在本协议项下的各项权利义务由其已由有权部门确认的继承人承继。若会员丧失全部或部分民事权利能力或民事行为能力，胜辉贷平台或其授权的主体有权根据有效法律文书或其法定监护人的指示处置与会员账户相关的款项。 
\n
\n8.3胜辉贷平台有权基于单方独立判断，在其认为可能发生危害交易安全等情形时，不经通知而先行暂停、中断或终止向会员提供本协议项下的全部或部分会员服务（包括收费服务），并将注册资料移除或删除，且无需对会员或任何第三方承担任何责任。前述情形包括但不限于： 
\n
\n8.3.1胜辉贷平台认为会员提供的个人资料不具有真实性、有效性或完整性； 
\n
\n8.3.2胜辉贷平台发现异常交易或有疑义或有违法嫌疑时； 
\n
\n8.3.3胜辉贷平台认为会员的账户涉嫌洗钱、套现、传销、被冒用或其他胜辉贷平台认为有风险之情形； 
\n
\n8.3.4胜辉贷平台认为会员已经违反本协议中规定的各类规则； 
\n
\n8.3.5会员在使用胜辉贷平台收费服务时未按规定向胜辉贷平台支付相应的服务费用； 
\n
\n8.3.6会员的账户已连续三年内未实际使用（账户中有余额的，胜辉贷平台在终止本协议前会通知会员提现）； 
\n
\n8.3.7胜辉贷平台基于交易安全等原因，根据其单独判断需先行暂停、中断或终止向会员提供本协议项下的全部或部分会员服务，并将注册资料移除或删除的其他情形。 
\n
\n8.4会员同意，会员账户的暂停、中断或终止不代表会员责任的终止，会员仍应对会员使用胜辉贷平台服务期间的行为承担可能的违约或损害赔偿责任，同时胜辉贷平台仍可保有会员的相关信息。 
\n
\n8.5会员账户终止时，于胜辉贷平台电子账户中的现金少于提现手续费时，经会员同意，该金额可作为慈善捐款，并于胜辉贷平台中公布捐款细节。 
\n
\n第九条 法律适用、条款有效性及管辖 
\n
\n9.1胜辉贷对本协议拥有最终解释权，因本协议发生纠纷的，适用中华人民共和国法律。 
\n
\n9.2若本协议的部分条款被认定为无效或者无法实施时，本协议中的其他条款仍然有效。 
\n
\n9.3因履行本协议产生纠纷的，首先应友好协商解决。协商不成的，您在此完全同意将纠纷提交胜辉贷所在地有管辖权的人民法院诉讼解决。 
\n
\n第十条 本协议的生效、变更
\n
\n10.1您接受本协议通过网络界面以电子文本的方式签订，只要您点击页面中的“我已阅读并同意”《胜辉贷注册协议》 并按照胜辉贷平台规定的注册程序成功注册为会员，您的行为即表示同意并签署了本服务协议。本协议自您点击确认之日起生效。
\n
\n10.2 您同意胜辉贷平台有权随时更改本服务协议及相关规则。修改本服务协议时，胜辉贷平台将于相关页面公告修改的内容，会员应该在每次登录胜辉贷平台前查询胜辉贷平台的相关公告，以了解本服务协议及服务规则的变化。若会员不同意本服务协议或相关服务规则的修改，会员有权停止使用胜辉贷平台提供的服务。如果在胜辉贷平台修改协议或服务规则后，会员仍继续使用胜辉贷平台提供的服务，即表示会员同意胜辉贷平台对本服务协议及相关服务规则所做的所有修改，并愿意承担相应的法律后果。    
\n
\n十一条 其他
\n
\n11.1胜辉贷平台经营的各类规则为胜辉贷平台的运营规则，为本协议的一部分，与本协议有同等法律效力。
\n
\n11.2本服务协议不涉及您与胜辉贷的其他用户之间因网上交易而产生的法律关系及法律纠纷，但您在此同意将全面接受和履行与胜辉贷平台的其他用户在胜辉贷平台签订的任何电子法律文本，并承诺按该法律文本享有和/或放弃相应的权利、承担和/或豁免相应的义务。
\n
\n11.3您已经阅读、理解并接受本协议的全部条款及各类规则，并承诺遵守中国现的法律、法规、规章及其他政府规定，如有违反而导致任何法律后果的发生，您将以自己的名义独立承担所有相应的法律责任。</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="my_pull_to_refresh_pull_label">下拉刷新</string>
    <string name="my_pull_to_refresh_release_label">松开刷新</string>
    <string name="my_pull_to_refresh_refreshing_label">正在刷新\u2026</string>
</resources>