<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/digitkeypadrootlayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#80065e8d"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/gray_bg"
        android:gravity="bottom"
        android:orientation="vertical" 
        >
       <LinearLayout 
	    android:id="@+id/dismiss"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:orientation="vertical"
	    ></LinearLayout>
    <LinearLayout
        android:id="@+id/pay_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/keyboard"
        android:background="@drawable/keyboard_edittext_bg_nor"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/pay_title"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/pay_title"
            android:textColor="#404040"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e1dfdf" />

        <TextView
            android:id="@+id/pay_content"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:textColor="#606060"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/keyboard_sex_box_bg"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/pay_box1"
                style="@style/InputTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@drawable/keyboard_sex_boxline_bg" />

            <TextView
                android:id="@+id/pay_box2"
                style="@style/InputTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@drawable/keyboard_sex_boxline_bg" />

            <TextView
                android:id="@+id/pay_box3"
                style="@style/InputTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@drawable/keyboard_sex_boxline_bg" />

            <TextView
                android:id="@+id/pay_box4"
                style="@style/InputTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@drawable/keyboard_sex_boxline_bg" />

            <TextView
                android:id="@+id/pay_box5"
                style="@style/InputTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@drawable/keyboard_sex_boxline_bg" />

            <TextView
                android:id="@+id/pay_box6"
                style="@style/InputTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>
 <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:src="@drawable/keyboard_byanquan" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/gray_bg"
                android:gravity="center"
                android:paddingRight="4dp"
                android:text="@string/byAnquan"
                android:textColor="#666"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/pay_cancels"
               android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/gray_bg"
                android:text="忘记密码"
                android:textColor="#000"
                android:textSize="15sp" />
            <View 
                android:layout_width="0dp"
                android:layout_height="10dp"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/pay_sure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/gray_bg"
                android:text="取消"
                android:textColor="#000"
                android:textSize="15sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/keyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/pay_keyboard_one"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="#00065e8d"
                android:gravity="center"
                android:text="@string/one"
                android:textColor="#333"
                android:textSize="30sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="45dp"
                android:background="@color/gray_bg" />

            <Button
                android:id="@+id/pay_keyboard_two"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="#00065e8d"
                android:gravity="center"
                android:text="@string/two"
                android:textColor="#333"
                android:textSize="30sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="45dp"
                android:background="@color/gray_bg" />

            <Button
                android:id="@+id/pay_keyboard_three"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="#00065e8d"
                android:gravity="center"
                android:text="@string/three"
                android:textColor="#333"
                android:textSize="30sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_bg" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/pay_keyboard_four"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="#00065e8d"
                android:text="@string/four"
                android:textColor="#333"
                android:textSize="30sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="45dp"
                android:background="@color/gray_bg" />

            <Button
                android:id="@+id/pay_keyboard_five"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="#00065e8d"
                android:text="@string/five"
                android:textColor="#333"
                android:textSize="30sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="45dp"
                android:background="@color/gray_bg" />

            <Button
                android:id="@+id/pay_keyboard_sex"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="#00065e8d"
                android:text="@string/six"
                android:textColor="#333"
                android:textSize="30sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_bg" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/pay_keyboard_seven"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="#00065e8d"
                android:text="@string/seven"
                android:textColor="#333"
                android:textSize="30sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="45dp"
                android:background="@color/gray_bg" />

            <Button
                android:id="@+id/pay_keyboard_eight"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="#00065e8d"
                android:text="@string/eight"
                android:textColor="#333"
                android:textSize="30sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="45dp"
                android:background="@color/gray_bg" />

            <Button
                android:id="@+id/pay_keyboard_nine"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="#00065e8d"
                android:text="@string/nine"
                android:textColor="#333"
                android:textSize="30sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_bg" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/pay_keyboard_space"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="#00065e8d"
                android:textSize="30sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="45dp"
                android:background="@color/gray_bg" />

            <Button
                android:id="@+id/pay_keyboard_zero"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="#00065e8d"
                android:text="@string/ten"
                android:textColor="#333"
                android:textSize="30sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="45dp"
                android:background="@color/gray_bg" />

            <ImageButton
                android:id="@+id/pay_keyboard_del"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:src="@drawable/keyboard_dele"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout> 
    </LinearLayout>
	<LinearLayout
        android:id="@+id/jiazai_layout_tixian_mimasuj"
        android:layout_width="80dp"
        android:layout_height="85dp"
        android:layout_gravity="center"
        android:background="@drawable/jiazaibackgroup"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/DomeJiazai_tian_mimasuj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/jiazai" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom|center_horizontal"
            android:text="请稍后"
            android:textColor="@color/white" />
    </LinearLayout>
</FrameLayout>